# elite-parent-school-mis

./: .gitignore  README.md  WARP.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: auth.py  background_tasks.py  db.py  logging_utils.py  mailer.py  main.py  models.py  notification_service.py  notifications.py  pdf.py  schemas.py  security.py  seed.py  settings.py
backend/app/routers/: academics.py  accounting.py  admin.py  analytics.py  attendance.py  auth.py  comm.py  communication.py  discipline.py  exams.py  fees.py  grades.py  public.py  report_cards.py  secretary.py  students.py  teachers.py  timetable.py  users.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py  0002_students.py  0003_student_applications.py  0004_app_ref_files.py
backend/tests/: conftest.py  debug_test3.py  helpers.py  test_applications.py  test_auth_admin.py  test_students.py  utils.py
docs/: architecture.md
frontend/: middleware.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx  theme-registry.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/accountant/: layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admission/: page.tsx
frontend/src/app/apply/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/dean/: layout.tsx  page.tsx
frontend/src/app/director/: layout.tsx  page.tsx
frontend/src/app/discipline/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
(+63 files in other folders)
