[project]
name = "elite-school-mis"
version = "0.1.0"
description = "Elite Parent School Management Information System"
authors = [
    {name = "Your Name"}
]
requires-python = "^3.10"
package-mode = false
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "sqlalchemy (>=2.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4)",
    "bcrypt (>=4.0.1)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=7.0.1,<8.0.0)",
    "weasyprint (>=66.0,<67.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.2,<9)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]
